Add opensearch code so that Simple Icons can be added as a search engine in Firefox and Edge

--- a/public/index.pug
+++ b/public/index.pug
@@ -29,6 +29,12 @@ html(lang=lang)
     link(rel='apple-touch-icon', href=`${pageUrl}/images/apple-touch-icon.png`)
     link(rel='mask-icon', href=`${pageUrl}/images/logo.svg`, color='#111111')
     link(
+      rel='search',
+      type='application/opensearchdescription+xml',
+      title='Simple Icons',
+      href=`${pageUrl}/opensearch.xml`
+    )
+    link(
       rel='stylesheet',
       href='https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&family=Roboto+Mono:wght@400;600&display=swap'
     )
