Move view icon card path to a `defs` symbol

--- a/public/index.pug
+++ b/public/index.pug
@@ -50,6 +50,10 @@ html(lang=lang)
           )
         symbol#fg
           path(d='M7 2h2v20H7V2m12 7-8 5.6V3.4L19 9Z') 
+        symbol#vw
+          path(
+            d='m23.136 20.694-4.41-4.413a1.93 1.93 0 0 0-1.186-.551 9.632 9.632 0 0 0 2.13-6.044C19.67 4.344 15.325 0 9.983 0 4.642 0 .297 4.344.297 9.686c0 5.34 4.344 9.685 9.685 9.685 2.016 0 3.89-.62 5.44-1.677.01.48.195.957.563 1.325l4.413 4.413c.377.38.874.568 1.369.568s.992-.189 1.369-.568a1.935 1.935 0 0 0 0-2.738zm-13.154-4.55a6.465 6.465 0 0 1-6.458-6.458 6.465 6.465 0 0 1 6.458-6.458 6.465 6.465 0 0 1 6.458 6.458 6.465 6.465 0 0 1-6.458 6.458z'
+          )
 
   body.no-js.order-alpha.layout-comfortable.download-svg(tabindex='-1')
     .popup_modal.popup__top.hidden
@@ -450,9 +454,7 @@ html(lang=lang)
                   xmlns='http://www.w3.org/2000/svg',
                   viewBox='0 0 24 24'
                 )
-                  path(
-                    d='m23.136 20.694-4.41-4.413a1.93 1.93 0 0 0-1.186-.551 9.632 9.632 0 0 0 2.13-6.044C19.67 4.344 15.325 0 9.983 0 4.642 0 .297 4.344.297 9.686c0 5.34 4.344 9.685 9.685 9.685 2.016 0 3.89-.62 5.44-1.677.01.48.195.957.563 1.325l4.413 4.413c.377.38.874.568 1.369.568s.992-.189 1.369-.568a1.935 1.935 0 0 0 0-2.738zm-13.154-4.55a6.465 6.465 0 0 1-6.458-6.458 6.465 6.465 0 0 1 6.458-6.458 6.465 6.465 0 0 1 6.458 6.458 6.465 6.465 0 0 1-6.458 6.458z'
-                  )
+                  use(href='#vw')
               a.grid-item__button(
                 href=`/icons/${icon.slug}.svg`,
                 role='button',
