Fix icon not shown in details modal

--- a/public/index.pug
+++ b/public/index.pug
@@ -82,7 +82,7 @@ html(lang=lang)
     .detail_modal.detail__top.hidden
       .detail-body
         div
-          img.icon-preview
+          img.icon-preview.ld
         div
           h2
           button#icon-color
