Remove Discord translation dependency

--- a/public/index.pug
+++ b/public/index.pug
@@ -151,7 +151,7 @@ html(lang=lang)
               )
         li.header__list-item
           a.header__list-icon(
-            title=`${ t_('Discord') }`,
+            title='Discord',
             href='https://discord.gg/CV7QtdqYrk'
           )
             svg(role='img', viewBox='0 0 24 24')
