--- a/public/index.pug
+++ b/public/index.pug
@@ -152,7 +152,7 @@ html(lang=lang)
         li.header__list-item
           a.header__list-icon(
             title='Discord',
-            href='https://discord.gg/CV7QtdqYrk'
+            href='https://discord.gg/vUXFa7t5xJ'
           )
             svg(role='img', viewBox='0 0 24 24')
               path(
