--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -18,7 +18,7 @@
   --font-family-stylized: 'Roboto Mono', 'DejaVu Sans Mono', 'Consolas',
     monospace;
 
-  --color-x: rgb(0, 0, 0]);
+  --color-x: rgb(0, 0, 0);
   --color-x-hover: rgb(0, 0, 0, 0.8);
   --side-offset: 6rem;
   --header-top-offset: 5rem;
