--- a/public/index.pug
+++ b/public/index.pug
@@ -447,7 +447,7 @@ html(lang=lang)
         rel='noopener',
         role='button',
         target='_blank',
-        href='https://twitter.com/intent/tweet?url=https://simpleicons.org&text=Simple%20Icons%3A%20free%20SVG%20icons%20for%20popular%20brands.'
+        href='https://x.com/intent/tweet?url=https://simpleicons.org&text=Simple%20Icons%3A%20free%20SVG%20icons%20for%20popular%20brands.'
       )
         svg.footer-share--icon(role='img', viewBox='0 0 24 24')
           title #{ t_('X logo') }
