Swap Twitter button for X button (#311)

--- a/public/index.pug
+++ b/public/index.pug
@@ -447,12 +447,12 @@ html(lang=lang)
         rel='noopener',
         role='button',
         target='_blank',
-        href='https://twitter.com/intent/tweet?url=https://simpleicons.org&text=Simple%20Icons%3A%20free%20SVG%20icons%20for%20popular%20brands.'
+        href='https://x.com/intent/tweet?url=https://simpleicons.org&text=Simple%20Icons%3A%20free%20SVG%20icons%20for%20popular%20brands.'
       )
         svg.footer-share--icon(role='img', viewBox='0 0 24 24')
-          title #{ t_('Twitter logo') }
-          path(d=twitterIcon.path)
-        span #{ t_('Share this on Twitter!') }
+          title #{ t_('X logo') }
+          path(d=xIcon.path)
+        span #{ t_('Share this on X!') }
       .footer-repo
         p.
           #[a(title=`${ t_('Website repository') }`, href='https://github.com/simple-icons/simple-icons-website') #{ t_('Made with ❤️ on GitHub') }]
