Update labels and URLs for outdated-icons

--- a/public/index.pug
+++ b/public/index.pug
@@ -432,7 +432,7 @@ html(lang=lang)
                 svg(role='img', viewBox='0 0 24 24')
                   use(href='#cp')
       p#icon-missing.report-link #{ t_('Icon missing?') } #[a(href='https://github.com/simple-icons/simple-icons/issues/new?assignees=&labels=new+icon&template=icon_request.yml') #{ t_('Submit a request') }]
-      p#icon-outdated.report-link #{ t_('Icon outdated?') } #[a(href='https://github.com/simple-icons/simple-icons/issues/new?assignees=&labels=icon+outdated&template=icon_update.yml') #{ t_('Report outdated icon') }]
+      p#icon-outdated.report-link #{ t_('Icon outdated?') } #[a(href='https://github.com/simple-icons/simple-icons/issues/new?labels=update+icon%2Fdata&template=icon_update.yml&title=Update%3A+') #{ t_('Report outdated icon') }]
     footer.footer
       .footer-description
         //- prettier-ignore
